[mh-77] classes for upload and upload--disabled; fix whitespace

--- a/myhpom/static/myhpom/page/_upload_requirements.scss
+++ b/myhpom/static/myhpom/page/_upload_requirements.scss
@@ -5,8 +5,8 @@
 $invalid_color: #dc3545;
 
 .upload-requirements__title {
-	@extend .h6;
-	text-transform: uppercase;
+    @extend .h6;
+    text-transform: uppercase;
 }
 
 .upload-requirements__list {
@@ -15,39 +15,48 @@ $invalid_color: #dc3545;
 }
 
 .upload-requirements__item {
-	padding: 0 0 0 1.25rem;
-	line-height: 1.25;
-	margin-bottom: 0.75rem;
+    padding: 0 0 0 1.25rem;
+    line-height: 1.25;
+    margin-bottom: 0.75rem;
 }
 
 .upload-requirements__item-head {
-	font-weight: bold;
-	font-size: 1em;
+    font-weight: bold;
+    font-size: 1em;
 }
 
 .upload-requirements__item-errors {
-	color: $invalid_color;
+    color: $invalid_color;
 }
 
 .upload-requirements__label {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .upload-requirements__checkbox {
-	clear: left;
-	float: left;
-	margin-left: -1.25rem;
+    clear: left;
+    float: left;
+    margin-left: -1.25rem;
 }
 
 .upload-requirement__select--invalid {
-	border: 1px solid $invalid_color!important;
+    border: 1px solid $invalid_color!important;
+}
+
+.upload-requirements__submit {
+    cursor: pointer;
+}
+
+.upload-requirements__submit--disabled {
+    cursor: not-allowed;
+    /*pointer-events: none;*/
 }
 
 .upload-requirements__help--right {
-	float: right;
-	display: block;
-	font-weight: normal;
+    float: right;
+    display: block;
+    font-weight: normal;
 }
 
 .upload-requirements-link__list {
